# dataforge

./: .gitignore  IMPLEMENTATION_REPORT.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  START_HERE.md  STEP_BY_STEP_GUIDE.md  TESTING_GUIDE.md  cli.py  config.py  database.py  pyproject.toml  requirements.txt  server.py  test_dataforge.py
plans/: plan.md
src/mcp_server_dataforge/: __init__.py  cli.py  config.py  database.py  server.py  topology.py
src/mcp_server_dataforge/templates/: crm.yml
templates/: ecommerce.yml  healthcare.yml  hr.yml
