[build-system]  
requires = ["setuptools>=61.0"]  
build-backend = "setuptools.build_meta"  
  
[project]
name = "mcp-server-dataforge"
version = "0.1.0"
description = "MCP Server for generating realistic test data with referential integrity"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DataForge Contributors", email = "support@dataforge.dev"}
]
dependencies = [
    "mcp>=0.1.0",
    "sqlalchemy>=2.0.0",
    "faker>=20.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
]  
keywords = [  
    "mcp",  
    "model-context-protocol",  
    "database",  
    "test-data",  
    "seeding",  
    "faker",  
    "sql",  
    "postgresql",  
    "mysql",  
    "sqlite",  
    "cli",  
    "ai",  
    "claude",  
    "cursor",  
    "testing",  
    "development"  
]  
classifiers = [  
    "Development Status :: 4 - Beta",  
    "Intended Audience :: Developers",  
    "Topic :: Database",  
    "Topic :: Software Development :: Libraries :: Python Modules",  
    "Programming Language :: Python :: 3",  
    "Programming Language :: Python :: 3.8",  
    "Programming Language :: Python :: 3.9",  
    "Programming Language :: Python :: 3.10",  
    "Programming Language :: Python :: 3.11",  
    "Operating System :: OS Independent",  
    "License :: OSI Approved :: MIT License",  
    "Framework :: AsyncIO",  
]  
  
[project.urls]  
Homepage = "https://github.com/yourusername/dataforge-mcp"  
Documentation = "https://github.com/yourusername/dataforge-mcp#readme"  
Repository = "https://github.com/yourusername/dataforge-mcp"  
Issues = "https://github.com/yourusername/dataforge-mcp/issues"  
  
[project.scripts]
dataforge = "mcp_server_dataforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_server_dataforge = ["templates/*.yml"]  
